# betterinfo-geode

./: .gitignore  CMakeLists.txt  README.md  about.md  changelog.md  mod.json
.github/workflows/: build.yml
src/: enums.hpp  force_includes.h  main.cpp  utils.cpp  utils.hpp
src/delegates/: BILeaderboardDelegate.h  EnumSelectDelegate.h  NumberDialogCloseDelegate.h  SongDialogCloseDelegate.h  UploadDateDelegate.h
src/hooks/: CCObject.cpp  ChallengesPage.cpp  CommentCell.cpp  CreatorLayer.cpp  DailyLevelNode.cpp  DailyLevelPage.cpp  DemonInfoPopup.cpp  EditLevelLayer.cpp  FriendsProfilePage.cpp  GJBaseGameLayer.cpp  GJLevelList.cpp  GJMessageCell.cpp  GJMessagePopup.cpp  GJRequestCell.cpp  GJRewardItem.h  GJScoreCell.cpp  GJUserScore.hpp  GameLevelManager.cpp  InfoLayer.cpp  ItemInfoPopup.cpp  LeaderboardsLayer.cpp  LevelAreaInnerLayer.cpp  LevelBrowserLayer.cpp  LevelCell.cpp  LevelInfoLayer.cpp  LevelLeaderboard.cpp  LevelListCell.cpp  LevelListLayer.cpp  LevelPage.cpp  LevelSearchLayer.cpp  MoreSearchLayer.cpp  PlayLayer.cpp  ProfilePage.cpp  RewardsPage.cpp  StarInfoPopup.cpp
src/integrations/: ServerAPIEvents.hpp  eclipse.cpp  eclipse.hpp  qolmod.cpp  qolmod.hpp
src/layers/: CreatorInfoPopup.cpp  CreatorInfoPopup.h  CustomCreatorLayer.cpp  CustomCreatorLayer.h  CustomLevelSearchLayer.cpp  CustomLevelSearchLayer.h  CvoltonAlertLayerStub.cpp  CvoltonAlertLayerStub.h  CvoltonListView.cpp  CvoltonListView.h  CvoltonOptionsLayer.cpp  CvoltonOptionsLayer.h  CvoltonSearchOptions.cpp  CvoltonSearchOptions.h  DailyCell.cpp  DailyCell.h  DailyListView.cpp  IDRangePopup.h  (+41 more)
(+89 files in other folders)
